--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -21,7 +21,7 @@ spring:
     eureka:
         client:
             service-url:
-                defaultZone: http://eureka7001.com:7001/eureka
+                defaultZone: http://eureka7001.com:7001/eureka/
         instance:
             instance-id: dept-8001.com  #自定义服务名称信息 
             prefer-ip-address: true #访问路径可以显示Ip地址
@@ -47,7 +47,7 @@ spring:
     eureka:
         client:
             service-url:
-                defaultZone: http://eureka7001.com:7001/eureka
+                defaultZone: http://eureka7001.com:7001/eureka/
         instance:
             instance-id: dept-8001.com  #自定义服务名称信息 
             prefer-ip-address: true #访问路径可以显示Ip地址
